fixes isDeletedAt flag
